# cecli

./: CONTRIBUTING.md  README.md  handoff.md  pyproject.toml
.github/workflows/: ubuntu-tests.yml  windows-tests.yml
aider/: args.py  io.py  main.py  sandbox.py
aider/coders/: agent_coder.py  base_coder.py  navigator_coder.py
aider/mcp_support/: __init__.py
aider/tools/: __init__.py  context_manager.py  git.py
aider/tui/: io.py
benchmark/: benchmark.py  primary_variations.sh
cecli/: __init__.py  args.py  change_tracker.py  io.py  main.py  models.py  repo.py  sessions.py  utils.py
cecli/brainfile/: __init__.py  store.py
cecli/coders/: agent_coder.py  architect_coder.py  base_coder.py
cecli/commands/: __init__.py  agent_model.py  editor_model.py  exit.py  load_mcp.py  model.py  remove_mcp.py  task.py  weak_model.py
cecli/commands/utils/: base_command.py
cecli/helpers/: background_commands.py  hashline.py
cecli/helpers/__pycache__/: nested.cpython-313.pyc.1925408792928
cecli/helpers/conversation/: files.py  integration.py
cecli/helpers/hashpos/: hashpos.py
cecli/mcp/: manager.py  server.py  utils.py
cecli/prompts/: agent.yml
cecli/resources/: model-metadata.json
cecli/tools/: __init__.py  command.py  command_interactive.py  delete_text.py  edit_text.py  get_lines.py  indent_text.py  insert_text.py  read_range.py  replace_text.py  show_context.py  update_todo_list.py
cecli/tools/utils/: base_tool.py  registry.py
cecli/tui/: app.py  io.py  worker.py
cecli/tui/widgets/: __init__.py  active_task_bar.py
cecli/website/docs/: sessions.md
cecli/website/docs/config/: agent-mode.md  model-aliases.md  skills.md  workspaces.md
requirements/: requirements.in
tests/basic/: test_cecli_task_store.py  test_coder.py  test_io.py  test_main.py  test_models.py  test_sessions.py  test_task_management.py  test_wholefile.py
tests/basic/__pycache__/: test_onboarding.cpython-313-pytest-9.0.2.pyc.42356
tests/fixtures/: watch.py
tests/helpers/monorepo/: test_repomap_workspace.py
tests/hooks/__pycache__/: test_registry.cpython-313-pytest-9.0.2.pyc.42356
tests/tools/: test_context_manager.py  test_get_lines.py  test_insert_block.py  test_registry.py  test_show_context.py
tests/tui/: test_app.py
